--- a/index.html
+++ b/index.html
@@ -13,13 +13,9 @@
 		<link rel="shortcut icon" type="image/png" href="images/cat.png" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
-	<body class="is-preload">
-
-		<audio class="song" loop autoplay>
-			<source src="./music/get.mp3">
-			</source>
-			Your browser isn't invited for super fun audio time.
-		  </audio>
+	<body 
+	      <audio <source src="./music/get.mp3"></source></audio>
+	      class="is-preload">
 
 		<!-- Wrapper -->
 			<div id="wrapper" class="divided">
