--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="shortcut icon" type="image/png" href="images/cat.png" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<audio <source src="./music/get.mp3"></source></audio>
 	</head>
-	<body 
-	      <audio <source src="./music/get.mp3"></source></audio>
-	      class="is-preload">
-
+	<body class="is-preload">
+	      
 		<!-- Wrapper -->
 			<div id="wrapper" class="divided">
 
